# py-tool

./: .gitignore  Types.py  config.py  dev.bat  main.py  pyproject.toml  requirements.txt  test.py
core/abby-yearbook-parser/: main.py  readme.md  split.py  test.py  tree.txt
core/abby-yearbook-parser/data/: 2011流量.tmp  2013流量.tmp
core/arcgis_script/: builder_if_else.py  test.py  test2.py
core/image/: matrix_transform.py
core/mike21_tools/: mikefile_to_shp.py  mikepy.py
core/mikepy/: dfsu_parser.py  to_file.py  to_shp.py  to_xyz.py  xyz_to_shp.py
core/year_book/: abby.py  config.py  cps_utils.py  split.py  water_lever_parser.py
docs/: description.py  image_matrix_transform.md  matrix.ipynb
events/: config_check.py  startup.py
routers/: image_matrix_transform.py  mikeio.py  mikepy.py  test.py  upload.py  year_book.py  year_book_formart.py  year_book_parser.py
static/image/matrix_transform/: channel_v32.json
static/upload/mikeio/res/: 03_10%_af.dbf  03_10%_af.shp  03_10%_af.shx  03_10%_be.dbf  03_10%_be.shp  03_10%_be.shx  03_2%_af.dbf  03_2%_af.shp  03_2%_af.shx  03_2%_be.dbf  03_2%_be.shp  03_2%_be.shx  03_5%_af.dbf  03_5%_af.shp  03_5%_af.shx  03_5%_be.dbf  03_5%_be.shp  03_5%_be.shx
static/upload/mikeio/shp/: 10be.shp  10be.shx
test/: async_test.py  mikeio_test.py  upload_test.py
test/data/: 01_be_10.dbf  01_be_10.sbn  01_be_10.sbx  01_be_10.shp  01_be_10.shx
tools/: uploader.py
utils/: compress.py  dir_to_zip.py  index.py
