[tool.poetry]
name = "py-tool"
version = "0.1.0"
description = "基于fastapi整合一些自己编写的python工具做成接口，方便以后一键调用"
authors = ["cpasion-office-win10 <373704015@qq.com>"]
license = "Mozilla"
readme = "README.md"
packages = [{include = "py_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
aiofiles = "^0.8.0"
pandas = "^1.4.4"
loguru = "^0.6.0"
Pillow = "^9.2.0"
pydantic = {extras = ["dotenv"], version = "^1.10.1"}
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
