[tool.poetry]
name = "py-tool"
version = "0.1.0"
description = "基于fastapi整合一些自己编写的python工具做成接口，方便以后一键调用"
authors = ["cpasion-office-win10 <373704015@qq.com>"]
license = "Mozilla"
readme = "README.md"
packages = [{include = "py_tool"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
aiofiles = "^0.8.0"
pandas = "^1.4.4"
loguru = "^0.6.0"
Pillow = "^9.2.0"
pydantic = {extras = ["dotenv"], version = "^1.10.1"}
python-multipart = "^0.0.5"
gdal = {path = "whl/GDAL-3.4.3-cp310-cp310-win_amd64.whl"}
fiona = {path = "whl/Fiona-1.8.21-cp310-cp310-win_amd64.whl"}
PyKrige = "^1.7.0"
geopandas = "^0.11.1"
mikecore="^0.2.1"
mikeio="^1.0.3"
pyyaml="^6.0"
scipy="^1.9.1"
tqdm="^4.64.0"
xarray="^2022.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
